Adding funcionability -Now it adds the license text to the licenseTextBox -The buttons start disabled and get enabled when clicking a license -Not clicking the "moreInfoButton" opens a web broser to get more info about the selected license -Modifying the window icon

--- a/Commands/Window.resx
+++ b/Commands/Window.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAHYAAAB2AAAAAAAAAAAA
+        AABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAVBgYd1BQUABQUFAAUFBQAFBQ
+        UABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABUGBh3UFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQ
+        UABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAAAAAAakLS3ncBwcUlBQ
+        UABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAbyIiTKEtLecgAAAIUFBQAFBQUABQUFAAUFBQAFBQ
+        UABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAYRsbTMc3
+        N/+gLCzPKwAABlBQUABQUFAAUFBQAFBQUABQUFAAUFBQAAAAAASjLS3Lxzc3/2AcHEpQUFAAUFBQAFBQ
+        UABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQ
+        UACLJiaGyDc3/8g3N/+BIyNzUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAeiIid8g3N//INzf/jCYmhVBQ
+        UABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQ
+        UABQUFAAUFBQAJwsLL/INzf/yDc3/7ExMeZOFBQaUFBQAFBQUABQUFAAUFBQAE4WFhewMDDjyDc3/8g3
+        N/+dKyu+UFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQ
+        UABQUFAAUFBQAFBQUAAoDQ0TszIy8sg3N//INzf/yDc3/4wmJpVQUFAAUFBQAFBQUABQUFAAiyUllsg3
+        N//INzf/yDc3/7MxMfMxDAwVUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABlHBySkCgojmkb
+        G1UnAAANUFBQAFBQUABQUFAAUFBQAG0fH1vINzf/yDc3/8g3N//INzf/ujMz9l4YGDZQUFAAUFBQAF4Y
+        GDa6MzP2yDc3/8g3N//INzf/yDc3/20fH1tQUFAAUFBQAFBQUABQUFAAJwAADWkbG1WQKCiOZRwckmQZ
+        GTO6NDT1yDc3/7AwMPSTKSnCeyMjhUYUFE0AAAAFkSgolMg3N//INzf/yDc3/8g3N//INzf/lCcntVBQ
+        UABQUFAAmSsrtMg3N//INzf/yDc3/8g3N//INzf/kSgolAAAAAJIERE8dB4ed5AnJ7WkLS3vyDc3/7w0
+        NPdhHBw3UFBQAIslJZbINzf/yDc3/8g3N//INzf/xjY2/6YuLuCyMDDoyDc3/8g3N//INzf/yDc3/8g3
+        N//ENjb+bSAgWW0gIFnENjb+yDc3/8g3N//INzf/yDc3/8g3N/+yMDDopi4u4MY2Nv/INzf/yDc3/8g3
+        N//INzf/iyUlllBQUABQUFAAThYWF7AwMOPINzf/yDc3/8g3N//INzf/yDc3/8g3N//INzf/yDc3/8g3
+        N//INzf/yDc3/8g3N/+dKyvWoy0t08g3N//INzf/yDc3/8g3N//INzf/yDc3/8g3N//INzf/yDc3/8g3
+        N//INzf/yDc3/7ExMeZOFBQaUFBQAFBQUABQUFAAeSAgeMg3N//INzf/yDc3/8g3N//INzf/yDc3/8g3
+        N//INzf/yDc3/8g3N//INzf/yDc3/6EsLP/INzf/yDc3/8g3N//INzf/yDc3/8g3N//INzf/yDc3/8g3
+        N//INzf/yDc3/8g3N//INzf/gCMjdFBQUABQUFAAUFBQAFBQUAAzAAAFoy0ty8g3N//INzf/yDc3/8g3
+        N//INzf/yDc3/8g3N//INzf/yDc3/8g3N/+6MzP/sTEx/8g3N//INzf/yDc3/8g3N//INzf/yDc3/8g3
+        N//INzf/yDc3/8g3N//INzf/yDc3/6AsLM8rAAAGUFBQAFBQUABQUFAAUFBQAFBQUABvHR1OwzU1/cg3
+        N//INzf/yDc3/8g3N//INzf/yDc3/8g3N/+qPlX/qz5U/28/cf8zWsz/NFrL/4dGeP+qPlX/qj5V/8g3
+        N//INzf/yDc3/8g3N//INzf/yDc3/8g3N//DNjb9cB8fUlBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQ
+        UACVKSmwyDc3/8g3N//INzf/yDc3/8g3N//INzf/XlCh/wRw//8Rkv//HK7//yC6//8guv//HK///xGT
+        //8EcP//X1Cg/8g3N//INzf/yDc3/8g3N//INzf/yDc3/5UpKa9QUFAAUFBQAFBQUABQUFAAUFBQAFBQ
+        UABQUFAAUFBQAFUVFTC3MzPyyDc3/8g3N//INzf/mEJn/0Rbvf8Xof//KdD//yrU//8q1P//KtT//yrU
+        //8q1P//KtT//ynR//8Wof//RFq8/55BYf/INzf/yDc3/8g3N/+5MjL0WhQUM1BQUABQUFAAUFBQAFBQ
+        UABQUFAAUFBQAFBQUABQUFAAUFBQAIklJZHINzf/yDc3/5RDa/8Ecf//Ir7//yrU//8q1P//KtT//yrU
+        //8q1P//KtT//yrU//8q1P//KtT//yrU//8hvf//BHH//5VDav/INzf/yDc3/4glJZBQUFAAUFBQAFBQ
+        UABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAPQwMFawvL9/INzf/Qlq+/yG9//8q1P//KtT//yrU
+        //8q1P//KtT//yrU//8q1P//KtT//yrU//8q1P//KtT//yrU//8iv///Qlu//8g3N/+sMDDhQxYWF1BQ
+        UABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAdCIicmFPnv8Xo///KtT//zG9
+        1f+ErWD/WaB//yrT/v8q1P//KtT//yrU//8q1P//KtT//yrU//8q1P//KtT//yrU//8Xov//Yk+d/3sg
+        IG5QUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUAAAXe4sBHL//ynQ
+        //8q1P//LbTP//TDAP/6yAD/pKEq/z2tsP8q1P//KtT//yrU//8q1P//KtT//yrU//8q1P//KtT//ynQ
+        //8Ecf//AF3uLFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAABo
+        /zESlf//KtT//yrU//8q0vz/cZhY//3KAP//zAD/k6E9/0aspv8q1P//KtT//yrU//8q1P//KtT//yrU
+        //8q1P//KtT//xGU//8AaP8xUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQ
+        UABQUFAAAGb/VR2x//8q1P//KtT//yrU//8p0fv/cphX//7LAP//zAD/lKE9/z2ssv8q1P//KtT//yrU
+        //8q1P//KtT//yrU//8q1P//HLD//wBm/1VQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQ
+        UABQUFAAUFBQAFBQUAAAZf+/Ib3//yrU//8q1P//KtT//yrU//8p0fv/cphW//7LAP//zAD/paAp/yrT
+        /v8q1P//KtT//yrU//8q1P//KtT//yrU//8hu///AGX/v1BQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQ
+        UABQUFAAUFBQAFBQUABQUFAAUFBQAABm/8oivv//KtT//yrU//8q1P//KtT//yrU//8p0Pr/c5dV//7L
+        AP/5xwD/fptO/4SkU/9hoXf/K8vx/yrU//8q1P//KtT//yK+//8AZf/JUFBQAFBQUABQUFAAUFBQAFBQ
+        UABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAAGX/Yh2z//8q1P//KtT//yrU//8q1P//KtT//yrU
+        //8p0Pr/c5dV//7LAP//zAD//8wA///MAP+CmUb/KtL9/yrU//8q1P//HbL//wBl/2JQUFAAUFBQAFBQ
+        UABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUAAAZf8wFJv//yrU//8q1P//KtT//yrU
+        //8q1P//KtT//yrU//8xrr//98YA///MAP//zAD/88IA//bFAP8xr8D/KtT//yrU//8Tmf//AGX/MFBQ
+        UABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAABn/y8Gdv//KtP//yrU
+        //8q1P//KtT//yrU//8q1P//KtT//zWqt//6yAD//8wA/4meR/8vsMb/tach/zWqt/8q1P//KtP//wZ1
+        //8AZP8uUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAAAD/AQBm
+        /6Iaq///KtT//yrU//8q1P//KtT//yrU//8q1P//KdD6/5ifNv//zAD/k6JA/zqkqf9qgUD/Kc/5/yrU
+        //8aqv//AGX/oQAA/wFQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQ
+        UABQUFAAAAD/AQRx/8Akxf//KtT//yrU//8q1P//KtT//yrU//8q1P//L8Dc/3egXP+cozf/eKFd/zC/
+        2/8q1P//Jcb//wRy/8EAAP8BUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQ
+        UABQUFAAUFBQAFBQUABQUFAAAGf/Ugd4//8lx///KtT//yrU//8q1P//KtT//yrU//8q1P//KtT//yrU
+        //8q1P//KtT//yXG//8HeP//AGb/UFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQ
+        UABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUAAAAP8BAGf/XgVy/8scsP//KtP//yrU//8q1P//KtT//yrU
+        //8q1P//KtT//yrT//8cr///BXH/ywBl/10AAP8BUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQ
+        UABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAAID/AgBm/6UIfP//F6L//yG9
+        //8myf//Jsn//yG9//8Xof//CHv//wBn/6QAgP8CUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQ
+        UABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQUABQUFAAAFX/AwBl
+        /0cAZ/9FAGb/cwBm/98AZv/eAGb/cwBn/0UAZf9HAFX/A1BQUABQUFAAUFBQAFBQUABQUFAAUFBQAFBQ
+        UABQUFAAUFBQAFBQUABQUFAA/9/7//+P8f//h+H//4fh//+Dwf//A8D/DwGA8AABgACAAAABgAAAAcAA
+        AAPAAAAD4AAAB/AAAA/wAAAP+AAAH/gAAB/8AAA//AAAP/wAAD/8AAA//AAAP/wAAD/8AAA//AAAP/wA
+        AD/8AAA//gAAf/8AAP//AAD//8AD///gB/8=
+</value>
+  </data>
 </root>
