Fixing bugs -Fixed crash when solution and projects aren't on the same folder -It looks like VS now adds files automatically, so I removed the csproj operations because they're not needed anymore -Improving code a little bit by changing how an if works

--- a/Commands/Window.resx
+++ b/Commands/Window.resx
@@ -271,7 +271,7 @@
     <value>2</value>
   </data>
   <data name="licenseTextBox.Text" xml:space="preserve">
-    <value>🢀 Select a license from the list at left</value>
+    <value>🢀 Select a license from this list</value>
   </data>
   <data name="&gt;&gt;licenseTextBox.Name" xml:space="preserve">
     <value>licenseTextBox</value>
